# qarith-stern-brocot

./: .gitignore  .travis.yml  Make  Makefile  Merge_Order.v  QArith_Stern_Brocot.v  Q_Archimedean.v  Q_denumerable.v  Q_field.v  Q_ordered_field_properties.v  Q_to_R.v  Qabs.v  Qhomographic.v  Qhomographic_Qpositive_to_Q_properties.v  Qhomographic_Qpositive_to_Qpositive.v  Qhomographic_sign.v  Qhomographic_sign_properties.v  Qmax_min.v  Qpositive.v  Qpositive_order.v  Qpositive_plus_mult.v  Qpositive_sub.v  Qquadratic.v  Qquadratic_Qpositive_to_Q_properties.v  Qquadratic_Qpositive_to_Qpositive.v  Qquadratic_sign.v  Qquadratic_sign_properties.v  Qsyntax.v  README  README.md  R_addenda.v  Zaux.v  _CoqProject  coq-qarith-stern-brocot.opam  default.nix  description  dune  dune-project  general_Q.v  homographicAcc_Qhomographic_sign.v  (+6 more)
.github/workflows/: coq-ci.yml  docker-action.yml  nix-action.yml
theories/: Field_Theory_Q.v  Merge_Order.v  QArith_Stern_Brocot.v  Q_Archimedean.v  Q_denumerable.v  Q_field.v  Q_order.v  Q_ordered_field_properties.v  Q_to_R.v  Qabs.v  Qhomographic.v  Qhomographic_Qpositive_to_Q_properties.v  Qhomographic_Qpositive_to_Qpositive.v  Qhomographic_sign.v  Qhomographic_sign_properties.v  Qmax_min.v  Qpositive.v  Qpositive_le.v  Qpositive_order.v  Qpositive_plus_mult.v  Qpositive_sub.v  Qquadratic.v  Qquadratic_Qpositive_to_Q_properties.v  Qquadratic_Qpositive_to_Qpositive.v  Qquadratic_sign.v  Qquadratic_sign_properties.v  Qsyntax.v  R_addenda.v  Zaux.v  dune  general_Q.v  homographicAcc_Qhomographic_sign.v  homographic_correctness.v  positive_fraction_encoding.v  quadraticAcc_Qquadratic_sign.v  quadratic_correctness.v  second_Field_Theory_Q.v  sqrt2.v
