opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/qarith-stern-brocot"
dev-repo: "git+https://github.com/coq-community/qarith-stern-brocot.git"
bug-reports: "https://github.com/coq-community/qarith-stern-brocot/issues"
license: "LGPL-2.1-or-later"

synopsis: "Binary rational numbers"
description: """
Development of rational numbers as finite binary lists and defining
field operations on them in two different ways: strict and lazy.
"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.7" & < "8.12~")}
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Rational numbers"
  "category:Miscellaneous/Extracted Programs/Arithmetic"
  "keyword:rational numbers"
  "keyword:arithmetic"
  "keyword:field tactic"
  "keyword:binary lists"
  "keyword:Stern-Brocot"
  "logpath:QArithSternBrocot"
]
authors: [
  "Milad Niqui"
  "Yves Bertot"
]
